[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/fonts/Jost-800-Heavy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Jost-400-Book.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/EndScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxVignette/Vignette.gdshader" type="Shader" id=4]
[ext_resource path="res://addons/sxgd/assets/fonts/Jost-800-Heavy.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/sxgd/nodes/fx/screen-effects/SxVignette/SxVignette.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fx/exitdoor.wav" type="AudioStream" id=7]
[ext_resource path="res://screens/Title/Title.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/size = 10.0
shader_param/ratio = 0.25

[sub_resource type="DynamicFont" id=1]
size = 82
outline_size = 2
outline_color = Color( 0.145098, 0, 0.337255, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 82
outline_size = 2
outline_color = Color( 0.145098, 0.152941, 0.494118, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0.2, 0.2, 0.2, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 1
outline_color = Color( 0.121569, 0, 0.172549, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.666667 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Time:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 274, 64 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lab:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 467, 94 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Author:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "boot"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.666667 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Time:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.255, 1 ),
"update": 0,
"values": [ Vector2( -274, 64 ), Vector2( 274, 64 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lab:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 0.255, 1 ),
"update": 0,
"values": [ Vector2( 1500, 94 ), Vector2( 1500, 94 ), Vector2( 467, 94 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Author:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 5 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="EndScene" parent="." instance=ExtResource( 3 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.666667 )

[node name="Vignette" parent="." instance=ExtResource( 6 )]
material = SubResource( 9 )

[node name="Time" type="RichTextLabel" parent="."]
margin_left = 274.0
margin_top = 64.0
margin_right = 524.0
margin_bottom = 184.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50]Time[/wave]"
text = "Time"
fit_content_height = true
scroll_active = false

[node name="Lab" type="Label" parent="."]
margin_left = 467.0
margin_top = 94.0
margin_right = 590.0
margin_bottom = 213.0
rect_rotation = 5.0
custom_fonts/font = SubResource( 2 )
text = "Lab"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 150

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
margin_top = 150.0
margin_right = 832.0
margin_bottom = 480.0
alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/Buttons"]
margin_top = 53.0
margin_right = 832.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 3 )
text = "Continue"
flat = true

[node name="Select Level" type="Button" parent="MarginContainer/Buttons"]
margin_top = 110.0
margin_right = 832.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 3 )
text = "Select Level"
flat = true

[node name="New Game2" type="Button" parent="MarginContainer/Buttons"]
margin_top = 167.0
margin_right = 832.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 3 )
text = "New Game"
flat = true

[node name="Options" type="Button" parent="MarginContainer/Buttons"]
margin_top = 224.0
margin_right = 832.0
margin_bottom = 277.0
custom_fonts/font = SubResource( 3 )
text = "Options"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -50.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ClearSaveData" type="Button" parent="MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 126.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
text = "Clear save data"
flat = true

[node name="Author" type="RichTextLabel" parent="."]
anchor_bottom = 1.0
margin_left = 303.0
margin_top = 446.0
margin_right = 552.0
margin_bottom = 476.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]Made by [wave]@Srynetix[/wave][center]"
text = "Made by @Srynetix"
fit_content_height = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "boot"
anims/RESET = SubResource( 5 )
anims/boot = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
pitch_scale = 2.0

[node name="ClearSaveDataOverlay" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tween" type="Tween" parent="ClearSaveDataOverlay"]

[node name="VBoxContainer" type="VBoxContainer" parent="ClearSaveDataOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 80
alignment = 1

[node name="Label" type="Label" parent="ClearSaveDataOverlay/VBoxContainer"]
margin_top = 125.0
margin_right = 832.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 11 )
text = "Are you sure you want to clear all data, including your game progression ?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="ClearSaveDataOverlay/VBoxContainer"]
margin_top = 302.0
margin_right = 832.0
margin_bottom = 355.0
custom_constants/separation = 80
alignment = 1

[node name="Yes" type="Button" parent="ClearSaveDataOverlay/VBoxContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 381.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 12 )
text = "Yes"
flat = true

[node name="No" type="Button" parent="ClearSaveDataOverlay/VBoxContainer/HBoxContainer"]
margin_left = 461.0
margin_right = 518.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 12 )
text = "No"
flat = true

[connection signal="pressed" from="MarginContainer/Buttons/Continue" to="." method="start_game"]
[connection signal="pressed" from="MarginContainer/Buttons/Select Level" to="." method="level_selector"]
[connection signal="pressed" from="MarginContainer/Buttons/New Game2" to="." method="start_new_game"]
[connection signal="pressed" from="MarginContainer/Buttons/Options" to="." method="options"]
